[package]
name = "tokio-test"
# When releasing to crates.io:
# - Remove path dependencies (if any)
# - Update CHANGELOG.md.
# - Create "koko-test-0.4.x" git tag.
version = "0.4.5"
edition = "2021"
rust-version = "1.71"
authors = ["Koko Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
Testing utilities for koko- and futures-based code
"""
categories = ["asynchronous", "development-tools::testing"]

[dependencies]
koko = { version = "1.2.0", features = ["rt", "sync", "time", "test-util"] }
koko-stream = "0.1.1"
futures-core = "0.3.0"

[dev-dependencies]
koko = { version = "1.2.0", features = ["full"] }
futures-util = "0.3.0"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
